--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+r2d2 = "0.8"
+diesel = {version="1.4", features=["postgres", "r2d2"]}
+failure = "0.1"
