--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2018"
 
 [dependencies]
 r2d2 = "0.8"
-diesel = {version="1.4", features=["postgres", "r2d2"]}
+diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 failure = "0.1"
+chrono = "0.4"
+rayon = "1.1"
