--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 failure = "0.1"
 chrono = "0.4"
 rayon = "1.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+subprocess = "0.1"
+dotenv = "*"
