--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 subprocess = "0.1"
-dotenv = "*"
+dotenv = "0.14"
+glob = "0.3"
+flate2 = "1.0"
