--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -17,3 +17,10 @@ subprocess = "0.1"
 dotenv = "0.14"
 glob = "0.3"
 flate2 = "1.0"
+structopt = "0.2"
+parking_lot = "0.8"
+
+[[bin]]
+name = "security-log-parse-rust"
+path = "src/main.rs"
+doc = false
