--- a/Dockerfile.test.ubuntu18.04
+++ b/Dockerfile.test.ubuntu18.04
@@ -12,3 +12,4 @@ ADD Cargo.toml /security_log_analysis_rust
 ADD src /security_log_analysis_rust/src
 ADD scripts /security_log_analysis_rust/scripts
 ADD Makefile /security_log_analysis_rust
+ADD templates /security_log_analysis_rust/templates
