--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ structopt = "0.2"
 parking_lot = "0.8"
 postgres = "0.15"
 rand = "0.7"
+log = "0.4"
+env_logger = "0.6"
 
 [[bin]]
 name = "security-log-parse-rust"
