--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.1.17"
+version = "0.1.18"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -24,6 +24,7 @@ postgres = "0.15"
 rand = "0.7"
 log = "0.4"
 env_logger = "0.6"
+retry = "0.5"
 
 [[bin]]
 name = "security-log-parse-rust"
