--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --verbose --all
