--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Install deps
+      run: sudo apt-get update && sudo apt-get install libpq-dev
     - name: Clippy
       run: cargo clippy
     - name: Build
