--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -8,7 +8,6 @@ edition = "2018"
 r2d2 = "0.8"
 r2d2_postgres = "0.16"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
-failure = "0.1"
 chrono = "0.4"
 rayon = "1.3"
 serde = "1.0"
@@ -25,6 +24,7 @@ rand = "0.7"
 log = "0.4"
 env_logger = "0.7"
 retry = "0.5"
+anyhow = "1.0"
 
 [[bin]]
 name = "security-log-parse-rust"
