--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -10,8 +10,7 @@ r2d2_postgres = "0.16"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 chrono = "0.4"
 rayon = "1.3"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
 subprocess = "0.1"
 dotenv = "0.15"
@@ -23,7 +22,7 @@ postgres = "0.17"
 rand = "0.7"
 log = "0.4"
 env_logger = "0.7"
-retry = "0.5"
+retry = "1.0"
 anyhow = "1.0"
 postgres_query = "0.3"
 
