--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.3.3"
+version = "0.3.4"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -32,6 +32,9 @@ whois-rust = { git="https://github.com/ddboline/whois-rust", branch="tokio-0.2" 
 reqwest = {version="0.10", features=["json"]}
 futures = "0.3"
 tokio = {version="0.2", features=["full"]}
+derive_more = "0.99"
+inlinable_string = "0.1"
+bytes = "0.5"
 
 [[bin]]
 name = "security-log-parse-rust"
