--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tokio = {version="0.2", features=["full"]}
 derive_more = "0.99"
 inlinable_string = "0.1"
 bytes = "0.5"
+envy = "0.4"
 
 [[bin]]
 name = "security-log-parse-rust"
