--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.3.7"
+version = "0.3.8"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -19,7 +19,7 @@ dotenv = "0.15"
 glob = "0.3"
 flate2 = "1.0"
 structopt = "0.3"
-parking_lot = "0.10"
+parking_lot = "0.11"
 tokio-postgres = "0.5"
 rand = "0.7"
 log = "0.4"
@@ -27,13 +27,13 @@ env_logger = "0.7"
 retry = "1.0"
 anyhow = "1.0"
 postgres_query = "0.3"
-dirs = "2.0"
+dirs = "3.0"
 whois-rust = { git="https://github.com/ddboline/whois-rust", branch="tokio-0.2" }
 reqwest = {version="0.10", features=["json"]}
 futures = "0.3"
 tokio = {version="0.2", features=["full"]}
 derive_more = "0.99"
-inlinable_string = "0.1"
+smartstring = "0.2"
 bytes = "0.5"
 envy = "0.4"
 
