--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 
 [dependencies]
 r2d2 = "0.8"
-r2d2_postgres = "0.16"
 deadpool = "0.5"
 deadpool-postgres = "0.5"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
@@ -37,6 +36,7 @@ smartstring = "0.2"
 bytes = "0.5"
 envy = "0.4"
 stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.3", features=["postgres_types", "diesel_types"] }
+smallvec = "1.4"
 
 [[bin]]
 name = "security-log-parse-rust"
