--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ deadpool = "0.5"
 deadpool-postgres = "0.5"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 chrono = "0.4"
-rayon = "1.3"
+rayon = "1.4"
 serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
 subprocess = "0.2"
@@ -23,7 +23,7 @@ tokio-postgres = "0.5"
 rand = "0.7"
 log = "0.4"
 env_logger = "0.7"
-retry = "1.0"
+retry = "1.1"
 anyhow = "1.0"
 postgres_query = "0.3"
 dirs = "3.0"
@@ -37,6 +37,8 @@ bytes = "0.5"
 envy = "0.4"
 stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.3", features=["postgres_types", "diesel_types"] }
 smallvec = "1.4"
+avro-rs = {version = "0.11", features = ["snappy"]}
+deadqueue = "0.1"
 
 [[bin]]
 name = "security-log-parse-rust"
