--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.3.18"
+version = "0.3.19"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 actix-web = "3.2"
 r2d2 = "0.8"
-deadpool = "0.6"
-deadpool-postgres = "0.6"
+deadpool = "0.5"
+deadpool-postgres = "0.5"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 chrono = "0.4"
 rayon = "1.5"
@@ -19,7 +19,7 @@ glob = "0.3"
 flate2 = "1.0"
 structopt = "0.3"
 parking_lot = "0.11"
-tokio-postgres = "0.6"
+tokio-postgres = "0.5"
 rand = "0.7"
 log = "0.4"
 env_logger = "0.8"
@@ -29,7 +29,7 @@ thiserror = "1.0"
 dirs = "3.0"
 reqwest = {version="0.10", features=["json"]}
 futures = "0.3"
-tokio = {version="0.3", features=["full"]}
+tokio = {version="0.2", features=["full"]}
 derive_more = "0.99"
 smartstring = "0.2"
 bytes = "0.5"
@@ -38,8 +38,7 @@ smallvec = "1.4"
 avro-rs = {version = "0.11", features = ["snappy"]}
 deadqueue = "0.1"
 itertools = "0.9"
-tokio-compat-02 = "0.1"
-postgres_query = { git = "https://github.com/ddboline/rust-postgres-query.git", branch="master" }
+postgres_query = "0.3"
 stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.9", features=["postgres_types", "diesel_types"] }
 
 [[bin]]
