--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.3.21"
+version = "0.4.0"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -15,8 +15,8 @@ Analyze Auth Logs."""
 [dependencies]
 actix-web = "3.3"
 r2d2 = "0.8"
-deadpool = "0.5"
-deadpool-postgres = "0.5"
+deadpool = "0.7"
+deadpool-postgres = "0.7"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 chrono = "0.4"
 rayon = "1.5"
@@ -27,7 +27,7 @@ glob = "0.3"
 flate2 = "1.0"
 structopt = "0.3"
 parking_lot = "0.11"
-tokio-postgres = "0.5"
+tokio-postgres = "0.7"
 rand = "0.8"
 log = "0.4"
 env_logger = "0.8"
@@ -35,19 +35,19 @@ retry = "1.2"
 anyhow = "1.0"
 thiserror = "1.0"
 dirs = "3.0"
-reqwest = {version="0.10", features=["json"]}
+reqwest = {version="0.11", features=["json"]}
 futures = "0.3"
-tokio = {version="0.2", features=["full"]}
+tokio = {version="1.0", features=["full"]}
 derive_more = "0.99"
 smartstring = "0.2"
-bytes = "0.5"
+bytes = "1.0"
 envy = "0.4"
-smallvec = "1.5"
+smallvec = "1.6"
 avro-rs = {version = "0.12", features = ["snappy"]}
-deadqueue = "0.1"
-itertools = "0.9"
-postgres_query = "0.3"
-stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.10", features=["postgres_types", "diesel_types"] }
+deadqueue = "0.2"
+itertools = "0.10"
+postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", branch="master"}
+stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.2.0", features=["postgres_types", "diesel_types"] }
 
 [[bin]]
 name = "security-log-parse-rust"
