--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -13,7 +13,8 @@ extended-description = """\
 Analyze Auth Logs."""
 
 [dependencies]
-actix-web = "3.3"
+warp = "0.3"
+http = "0.2"
 r2d2 = "0.8"
 deadpool = "0.7"
 deadpool-postgres = "0.7"
@@ -43,7 +44,7 @@ smartstring = "0.2"
 bytes = "1.0"
 envy = "0.4"
 smallvec = "1.6"
-avro-rs = {version = "0.12", features = ["snappy"]}
+avro-rs = {version = "0.13", features = ["snappy"]}
 deadqueue = "0.2"
 itertools = "0.10"
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", branch="master"}
