--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ smallvec = "1.6"
 avro-rs = {version = "0.13", features = ["snappy"]}
 deadqueue = "0.2"
 itertools = "0.10"
+stdout-channel = "0.4"
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", branch="master"}
 stack-string = { version="0.2", features=["postgres_types", "diesel_types"] }
 
