--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.5.9"
+version = "0.5.10"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -17,7 +17,7 @@ rweb = {version="0.12", features=["openapi"]}
 http = "0.2"
 r2d2 = "0.8"
 deadpool = "0.8"
-deadpool-postgres = "0.8"
+deadpool-postgres = "0.9"
 diesel = {version="1.4", features=["postgres", "r2d2", "chrono"]}
 chrono = "0.4"
 rayon = "1.5"
@@ -48,7 +48,7 @@ avro-rs = {version = "0.13", features = ["snappy"]}
 deadqueue = "0.2"
 itertools = "0.10"
 stdout-channel = "0.4"
-postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", branch="master"}
+postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.3-2", features=["deadpool"]}
 stack-string = { version="0.2", features=["postgres_types", "diesel_types", "rweb-openapi"] }
 
 [[bin]]
