--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,12 +23,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Install deps
-      run: |
-        sudo apt-get update && \
-        sudo apt-get install libpq-dev whois && \
-        rustup update && \
-        cargo install diesel_cli
 
     - name: Clippy
       run: cargo clippy -- -W clippy::pedantic
@@ -37,12 +31,13 @@ jobs:
 
     - name: Run tests
       run: |
-        diesel database setup && \
+        ./target/debug/security-log-parse-rust run-migrations && \
         cargo test --verbose --all && \
         cargo install cargo-tarpaulin && \
         cargo tarpaulin --verbose --all-features --workspace --out Xml
       env:
         DATABASE_URL: postgresql://postgres:2UtcMAAvNuBHPqK9@localhost:5432/security_logs
+        SERVER: example.com
 
     - name: Upload to codecov.io
       uses: codecov/codecov-action@v2.1.0
