--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ retry = "1.2"
 anyhow = "1.0"
 thiserror = "1.0"
 dirs = "4.0"
-reqwest = {version="0.11", features=["json", "rustls"], default_features=false}
+reqwest = {version="0.11", features=["json", "rustls-tls"], default_features=false}
 futures = "0.3"
 tokio = {version="1.6", features=["full"]}
 derive_more = "0.99"
