--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.6.3"
+version = "0.6.4"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -17,6 +17,10 @@ rweb = {version="0.15", features=["openapi"]}
 http = "0.2"
 deadpool = {version = "0.9", features=["serde", "rt_tokio_1"]}
 deadpool-postgres = {version="0.10", features=["serde"]}
+rusoto_core = {version = "0.47", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.47", default_features = false, features=["rustls"]}
+s3-ext = "0.4"
+sts_profile_auth = "0.6"
 chrono = "0.4"
 rayon = "1.5"
 serde = { version="1.0", features=["derive"]}
