--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ s3-ext = "0.4"
 sts_profile_auth = "0.6"
 chrono = "0.4"
 rayon = "1.5"
+num_cpus = "1.0"
 serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
 dotenv = "0.15"
