--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ flate2 = "1.0"
 structopt = "0.3"
 parking_lot = "0.12"
 tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1"]}
-postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1", "derive"]}
+postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1"]}
 rand = "0.8"
 log = "0.4"
 env_logger = "0.9"
