--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.9.2"
+version = "0.9.3"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -13,14 +13,14 @@ extended-description = """\
 Analyze Auth Logs."""
 
 [dependencies]
-rweb = {version="0.15", features=["openapi", "uuid"]}
+rweb = {version="0.15", features=["openapi"]}
 http = "0.2"
 deadpool = {version = "0.9", features=["serde", "rt_tokio_1"]}
 deadpool-postgres = {version="0.10", features=["serde"]}
-rusoto_core = {version = "0.47", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.47", default_features = false, features=["rustls"]}
-s3-ext = "0.4"
-sts_profile_auth = "0.6"
+rusoto_core = {version = "0.48", default_features = false, features=["rustls"]}
+rusoto_s3 = {version = "0.48", default_features = false, features=["rustls"]}
+s3-ext = "0.5"
+sts_profile_auth = "0.7"
 time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
 time-tz = {version="1.0", features=["system"]}
 rayon = "1.5"
@@ -31,8 +31,8 @@ glob = "0.3"
 flate2 = "1.0"
 structopt = "0.3"
 parking_lot = "0.12"
-tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1"]}
-postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-0_8", "with-serde_json-1"]}
+tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
+postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
 rand = "0.8"
 log = "0.4"
 env_logger = "0.9"
@@ -55,9 +55,10 @@ refinery = {version="0.8", features=["tokio-postgres"]}
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
 stack-string = { version="0.7", features=["postgres_types", "rweb-openapi"] }
 chrono = "0.4"
-polars = {version="0.20", features=["temporal", "parquet"]}
-authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.8.0"}
-uuid = "0.8"
+polars = {version="0.21", features=["temporal", "parquet"]}
+authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.8.3"}
+rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.4.12" }
+uuid = "1.0"
 cached = "0.34"
 
 [[bin]]
