--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.9.26"
+version = "0.9.27"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -37,7 +37,6 @@ postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with
 rand = "0.8"
 log = "0.4"
 env_logger = "0.9"
-retry = "1.2"
 anyhow = "1.0"
 thiserror = "1.0"
 dirs = "4.0"
@@ -48,19 +47,19 @@ derive_more = "0.99"
 bytes = "1.0"
 envy = "0.4"
 smallvec = "1.6"
-avro-rs = {version = "0.13", features = ["snappy"]}
 deadqueue = "0.2"
 itertools = "0.10"
 stdout-channel = "0.5"
+maplit = "1.0"
 refinery = {version="0.8", features=["tokio-postgres"]}
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
 stack-string = { version="0.7", features=["postgres_types", "rweb-openapi"] }
 chrono = "0.4"
-polars = {version="0.22", features=["temporal", "parquet"]}
-authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.8.9"}
+polars = {version="0.23", features=["temporal", "parquet"]}
+authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.9.1"}
 rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.4.13" }
 uuid = "1.0"
-cached = "0.37"
+cached = "0.38"
 
 [[bin]]
 name = "security-log-parse-rust"
