--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.9.30"
+version = "0.9.31"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -58,8 +58,8 @@ chrono = "0.4"
 polars = {version="0.24", features=["temporal", "parquet", "lazy"]}
 authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.9.5"}
 rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.4.14" }
-uuid = "1.0"
-cached = "0.39"
+uuid = { version = "1.0", features = ["serde", "v4"] }
+cached = "0.40"
 
 [[bin]]
 name = "security-log-parse-rust"
