--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.10.10"
+version = "0.11.0"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -13,55 +13,53 @@ extended-description = """\
 Analyze Auth Logs."""
 
 [dependencies]
-http = "0.2"
-deadpool = {version = "0.9", features=["serde", "rt_tokio_1"]}
-deadpool-postgres = {version="0.10", features=["serde"]}
-rusoto_core = {version = "0.48", default_features = false, features=["rustls"]}
-rusoto_s3 = {version = "0.48", default_features = false, features=["rustls"]}
-rusoto_ses = {version = "0.48", default_features = false, features=["rustls"]}
-s3-ext = "0.5"
-sts_profile_auth = "0.7"
-time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
-time-tz = {version="2.0", features=["system"]}
-rayon = "1.5"
-serde = { version="1.0", features=["derive"]}
-serde_json = "1.0"
-dotenv = "0.15"
-glob = "0.3"
-flate2 = "1.0"
-clap = {version="4.0", features=["derive"]}
-parking_lot = "0.12"
-tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
-postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
-rand = "0.8"
-log = "0.4"
-env_logger = "0.10"
 anyhow = "1.0"
-thiserror = "1.0"
-dirs = "5.0"
-reqwest = {version="0.11", features=["json", "rustls-tls"], default_features=false}
-futures = "0.3"
-tokio = {version="1.21", features=["full"]}
-derive_more = "0.99"
+authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.0"}
+aws-config = "0.56"
+aws-sdk-s3 = "0.31"
+aws-sdk-ses = "0.31"
 bytes = "1.0"
-envy = "0.4"
-smallvec = "1.6"
+cached = {version="0.46", features=["async", "async_tokio_rt_multi_thread"]}
+chrono = "0.4"
+clap = {version="4.0", features=["derive"]}
+deadpool = {version = "0.10", features=["serde", "rt_tokio_1"]}
+deadpool-postgres = {version="0.11", features=["serde"]}
 deadqueue = "0.2"
-itertools = "0.11"
-stdout-channel = "0.6"
-maplit = "1.0"
+derive_more = "0.99"
 dioxus = "0.4"
 dioxus-ssr = "0.4"
+dirs = "5.0"
+dotenv = "0.15"
+envy = "0.4"
+env_logger = "0.10"
+flate2 = "1.0"
+futures = "0.3"
+glob = "0.3"
+http = "0.2"
+itertools = "0.11"
+log = "0.4"
+maplit = "1.0"
+parking_lot = "0.12"
+polars = {version="0.33", features=["temporal", "parquet", "lazy"]}
+postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.5", features=["deadpool"]}
+postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
+rand = "0.8"
+rayon = "1.5"
 refinery = {version="0.8", features=["tokio-postgres"]}
-postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
-stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.1" }
-chrono = "0.4"
-polars = {version="0.32", features=["temporal", "parquet", "lazy"]}
-authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.10.8"}
+reqwest = {version="0.11", features=["json", "rustls-tls"], default_features=false}
+serde = { version="1.0", features=["derive"]}
+serde_json = "1.0"
+smallvec = "1.6"
+stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.2" }
+stdout-channel = "0.6"
+thiserror = "1.0"
+time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
+time-tz = {version="2.0", features=["system"]}
+tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
+tokio = {version="1.21", features=["full"]}
 rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.1-1"}
 rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.0-1" }
 uuid = { version = "1.0", features = ["serde", "v4"] }
-cached = "0.44"
 
 [[bin]]
 name = "security-log-parse-rust"
