--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.11.2"
+version = "0.11.3"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -14,10 +14,10 @@ Analyze Auth Logs."""
 
 [dependencies]
 anyhow = "1.0"
-authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.0"}
-aws-config = "0.56"
-aws-sdk-s3 = "0.34"
-aws-sdk-ses = "0.34"
+authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.3"}
+aws-config = {version="1.0", features=["behavior-version-latest"]}
+aws-sdk-s3 = "1.1"
+aws-sdk-ses = "1.1"
 bytes = "1.0"
 cached = {version="0.46", features=["async", "async_tokio_rt_multi_thread"]}
 chrono = "0.4"
@@ -35,12 +35,11 @@ env_logger = "0.10"
 flate2 = "1.0"
 futures = "0.3"
 glob = "0.3"
-http = "0.2"
-itertools = "0.11"
+itertools = "0.12"
 log = "0.4"
 maplit = "1.0"
 parking_lot = "0.12"
-polars = {version="0.34", features=["temporal", "parquet", "lazy"]}
+polars = {version="0.35", features=["temporal", "parquet", "lazy"]}
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.5", features=["deadpool"]}
 postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
 rand = "0.8"
