--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ thiserror = "1.0"
 time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
 time-tz = {version="2.0", features=["system"]}
 tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
-tokio = {version="1.21", features=["full"]}
+tokio = {version="1.34", features=["rt", "macros", "rt-multi-thread"]}
 rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.1-1"}
 rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.0-1" }
 uuid = { version = "1.0", features = ["serde", "v4"] }
