--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.11.4"
+version = "0.11.5"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -14,7 +14,7 @@ Analyze Auth Logs."""
 
 [dependencies]
 anyhow = "1.0"
-authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.5"}
+authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.11.7"}
 aws-config = {version="1.0", features=["behavior-version-latest"]}
 aws-sdk-s3 = "1.1"
 aws-sdk-ses = "1.1"
@@ -48,6 +48,7 @@ refinery = {version="0.8", features=["tokio-postgres"]}
 reqwest = {version="0.11", features=["json", "rustls-tls"], default_features=false}
 serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
+serde_yaml = "0.9"
 smallvec = "1.6"
 stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.2" }
 stdout-channel = "0.6"
@@ -57,7 +58,7 @@ time-tz = {version="2.0", features=["system"]}
 tokio-postgres = {version="0.7", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
 tokio = {version="1.34", features=["rt", "macros", "rt-multi-thread"]}
 rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.1-1"}
-rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.0-1" }
+rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.1" }
 uuid = { version = "1.0", features = ["serde", "v4"] }
 
 [[bin]]
