--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "security_log_analysis_rust"
-version = "0.11.9"
+version = "0.11.10"
 authors = ["Daniel Boline <ddboline@gmail.com>"]
 edition = "2018"
 
@@ -19,13 +19,13 @@ aws-config = {version="1.0", features=["behavior-version-latest"]}
 aws-sdk-s3 = "1.1"
 aws-sdk-ses = "1.1"
 bytes = "1.0"
-cached = {version="0.52", features=["async", "async_tokio_rt_multi_thread"]}
+cached = {version="0.53", features=["async", "async_tokio_rt_multi_thread"]}
 chrono = "0.4"
 clap = {version="4.0", features=["derive"]}
 deadpool = {version = "0.12", features=["serde", "rt_tokio_1"]}
 deadpool-postgres = {version="0.14", features=["serde"]}
 deadqueue = "0.2"
-derive_more = "0.99"
+derive_more = {version="1.0", features = ["full"]}
 dioxus = "0.5"
 dioxus-core = "0.5"
 dioxus-ssr = "0.5"
@@ -40,13 +40,13 @@ itertools = "0.13"
 log = "0.4"
 maplit = "1.0"
 parking_lot = "0.12"
-polars = {version="0.41", features=["temporal", "parquet", "lazy"]}
+polars = {version="0.43", features=["temporal", "parquet", "lazy"]}
 postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
 postgres-types = {version="0.2", features=["with-time-0_3", "with-uuid-1", "with-serde_json-1"]}
 rand = "0.8"
 rayon = "1.5"
 refinery = {version="0.8", features=["tokio-postgres"]}
-reqwest = {version="0.12", features=["json", "rustls-tls"], default_features=false}
+reqwest = {version="0.12", features=["json", "rustls-tls"], default-features=false}
 serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
 serde_yaml = "0.9"
