--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ dioxus = "0.5"
 dioxus-core = "0.5"
 dioxus-ssr = "0.5"
 dirs = "5.0"
-dotenv = "0.15"
+dotenvy = "0.15"
 envy = "0.4"
 env_logger = "0.11"
 flate2 = "1.0"
@@ -49,7 +49,7 @@ refinery = {version="0.8", features=["tokio-postgres"]}
 reqwest = {version="0.12", features=["json", "rustls-tls"], default-features=false}
 serde = { version="1.0", features=["derive"]}
 serde_json = "1.0"
-serde_yaml = "0.9"
+serde_yml = "0.0.12"
 smallvec = "1.6"
 stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi"], tag="0.9.3" }
 stdout-channel = "0.6"
